apply updates to recently merged upstream code